gce-gke-ingress/gce-gke-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: NodePort
  selector:
    app: service1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
