gce-gke-ingress/gce-gke-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  type: NodePort
  selector:
    app: service2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
