gce-gke-ingress/gce-gke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /svc1
        backend:
          serviceName: service1
          servicePort: 80
      - path: /svc2
        backend:
          serviceName: service2
          servicePort: 80
